<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidPlane</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="up">Up</string>
    <string name="gototop">Top</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="filenotfound">Sorry, I could not find the file you wanted to open!</string>
    <string name="noicon">no icon</string>
    <string name="novalidfile">Please start DroidPlane by opening a *.mm file"</string>
    <string name="cantloadfile">Sorry, I could not read this mindmap file. It seems to be incomplete or corrupted.</string>
    <!-- shown when the device ran out of memory while loading -->
    <string name="mindmaptoobig">Sorry, this mindmap is too big to open on this device.</string>
    <!-- shown when only a part of the mindmap file could be parsed -->
    <string name="incompletefile">This mindmap file is incomplete, showing only the part that could be read.</string>
    <string name="copynodetext">Copy Node Text</string>
    <string name="openlink">Open Link</string>
    <string name="openrichtext">Open Rich Text Content</string>
    <string name="help">Help</string>
    <string name="title_activity_rich_text_view">Rich Text View</string>
    <string name="mindmap_loading">Loading</string>
    <string name="search">Search</string>
    <string name="search_next">Search Next</string>
    <string name="search_prev">Search Prev.</string>
    <string name="open">Open</string>
    <!-- warning shown when invalid XML entities were corrected -->
    <string name="invalid_xml_entities">Fixed invalid characters in mindmap file</string>
</resources>
