<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- TODO: add icons -->
    <item
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showAsAction="ifRoom"
        android:title="@string/search" />
    <item
        android:id="@+id/search_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showAsAction="ifRoom"
        android:title="@string/search_next" />
    <item
        android:id="@+id/search_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showAsAction="ifRoom"
        android:title="@string/search_prev" />
    <item android:id="@+id/up"
        android:title="@string/up"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/top"
        android:title="@string/gototop"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/open"
        android:title="@string/open"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/help"
        android:title="@string/help"
        android:showAsAction="never" />
    
</menu>
